--- a/app/src/main/res/xml/data_extraction_rules.xml
+++ b/app/src/main/res/xml/data_extraction_rules.xml
@@ -5,10 +5,11 @@
 -->
 <data-extraction-rules>
     <cloud-backup>
-        <!-- TODO: Use <include> and <exclude> to control what is backed up.
+        <!-- Use <include> and <exclude> to control what is backed up.
         <include .../>
         <exclude .../>
         -->
+        <exclude domain="sharedpref" path="ua.leonidius.beatinspector.TOKENS.xml"/>
     </cloud-backup>
     <!--
     <device-transfer>
@@ -16,4 +17,5 @@
         <exclude .../>
     </device-transfer>
     -->
+    <exclude domain="sharedpref" path="ua.leonidius.beatinspector.TOKENS.xml"/>
 </data-extraction-rules>
